# breaktime-calculator

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  main_legacy.py  nixpacks.toml  pyproject.toml  requirements.txt  start-production.sh  start.bat  start.sh
app/: __init__.py  main.py
app/api/routes/: auth.py  config.py  files.py  upload.py
app/core/: auth.py  config.py  database.py
app/services/: audit_service.py  break_calculator.py  file_processor.py  progress_tracker.py
static/: breaktime_calculator_template.csv  breaktime_calculator_template_new.csv  breaktime_calculator_template_old.csv
templates/: base.html  config.html  error.html  history.html  index.html  login.html  processing.html  register.html  results.html
